[package]
name = "anpa"
version = "0.2.0"
authors = ["Andreas Hallberg <habbbe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[lib]
name = "anpa"
path = "src/lib/lib.rs"

[[bin]]
name = "anpa_test"
path = "bench/bin.rs"